# bytepicker

./: .gitignore  CMakeLists.txt  STATUS.md
src/bytepicker/: bytepicker.h  bytepicker.hpp  dll_api.h  error.h
src/bytepicker/positional/: positional.hpp  positional_reader.h  positional_writer.h
src/bytepicker/positional/reader/: open.cpp  positional_reader.c  positional_reader.hpp
src/bytepicker/positional/writer/: open.cpp  positional_writer.c  positional_writer.hpp
